resize on mobile fix

--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -83,6 +83,8 @@ div{
   max-height: 100px;
   object-fit: contain;
 }
+
+
 .cgb-0-info{
   overflow:hidden;
   white-space: nowrap;
@@ -97,23 +99,31 @@ div{
   max-height:100%;
   max-width:100%;
 
-    height:30dvh;
-    max-width:100%;
-    z-index: 10;
+  height:30dvh;
+  max-width:100%;
+  z-index: 10;
 
-    .vue-load-image{
-      min-height:100%;
-      max-height:100%;
+  .vue-load-image{
+    min-height:100%;
+    max-height:100%;
+    height:100%;
+    .w-9-load {
+      width:100%;
       height:100%;
-
-      .overlayImg{
-        width:100%;
-        height:100%;
-        max-height:90%;
-        max-width:100%;
-        object-fit: contain;
-        z-index: 10;
-      }
+min-height:90%;
+      min-width:90%;
+      max-height: 100px;
+      object-fit: contain;
+    }
+    .overlayImg{
+      width:100%;
+      height:100%;
+      
+      max-height:90%;
+      max-width:100%;
+      object-fit: contain;
+      z-index: 10;
+    }
   }
 }
 
